2010-04-27  Andreia Gaita  <avidigal@novell.com>

	* System.ServiceModel.info: Added ClientRuntimeChannel class definition
	  (fixes #560982)

2010-03-24  Jb Evain  <jbevain@novell.com>

	* Makefile.am: re-add the CheckVisibility step.

2010-03-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am:
	* masterinfos/System.Xml.Serialization.info: Added System.Xml.Serialization to
	the build.


2010-03-16  Jb Evain  <jbevain@novell.com>

	* Makefile: rename the net_2_1 profile to moonlight.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Skip the CheckVisibility step for the tuner until jb can fix
	the failure.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* masterinfos/mscorlib.info: Add Directory.GetFiles back manually, these
	methods are in SL2, but not in SL4 (and they're used by the SL 2 test suite).

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* masterinfos/System.info:
	* masterinfos/mscorlib.info:
	* masterinfos/System.Net.info:
	* masterinfos/System.Core.info:
	* masterinfos/System.ServiceModel.info:
	* masterinfos/Microsoft.VisualBasic.info:
	* masterinfos/System.Runtime.Serialization.info: Updated to SL4 beta.

	* Makefile.am: Added System.Core.xml to the list of descriptors.

2010-02-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Fix typo to break on visibility errors. Do not
	ship Mono.CompilerServices.SymbolWriter.dll with the XPI (it is
	an application assembly that needs access to mscorlib's internals
	i.e. platform code). The classes are now bundled inside mscorlib
	itself (and were already inside smcs.exe) so this assembly should
	not be needed anywhere else.

2010-02-06  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (END_INSTALL_TARGETS): we need to install
	Mono.CompilerServices.SymbolWriter.dll.  dlrconsole needs it.

2010-01-06  Jb Evain  <jbevain@novell.com>

	* Descriptors/mscorlib.xml: preserve Environment.StackTrace.

2009-12-10  Chris Toshok  <toshok@ximian.com>
