@@ -77,7 +77,6 @@ namespace Mono.Xaml {
 
 	}
 
-#if NOTYET
 	internal class SL4MarkupExpressionParser : MarkupExpressionParser {
 
 		private XamlParser parser;
@@ -106,8 +105,7 @@ namespace Mono.Xaml {
 		}
 
 	}
-#endif
-	
+
 	internal abstract class MarkupExpressionParser {
 
 		private StringBuilder piece;
